--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 <div class="my-photo"><!-- Nič? --></div>
             </div>
         </div>
-        <div class="box-2">2</div>
+        <div class="box-2">
+            <a href="#">2. Odkaz do neznáma</a>
+        </div>
         <div class="box-3">3</div>
         <div class="box-4">4</div>
     </div>
